# Fragmented-Code

./: README.md
AACPlayer_Openal/: CMakeLists.txt  README.md  aacplayer.c
AACPlayer_Openal/cmake/Modules/: FindFaad2.cmake  FindOpenal.cmake  FindSDL2.cmake
FastCGIUV/: CMakeLists.txt  fcgi.c  fcgi.h  main.c
FastCGIUV/cmake/Modules/: FindLibGC.cmake  FindLibUV.cmake
LibuvTest/: CMakeLists.txt  README.md  filebase.c  idle-basic.c  progress.c  tcp-echo-server.c  tcpclient.c  thread-create.c
LibuvTest/cmake/Modules/: FindLibUV.cmake
